fix:z-index

--- a/src/less/base.less
+++ b/src/less/base.less
@@ -17,6 +17,9 @@ a {
     }
   }
 }
+.el-message {
+  z-index: 10000 !important;
+}
 .el-table {
   &::before {
     display: none;
